src/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
import syntaxtree.*;
import syntaxtree.visitor.*;
import syntaxtree.*;
import syntaxtree.visitor.*;

import java.io.BufferedReader;
import java.io.File;
import java.io.FileReader;
import java.io.StringReader;
import java.util.ArrayList;
import java.util.List;

public class Parser implements ParserConstants {
    public static void main (String args[]) {
        Parser parser;

        if (args.length == 0){
            System.out.println("Reading the Input...");
            parser = new Parser(System.in);
        }
        else if (args.length == 1){
            try{
                System.out.println("Reading the Archive Input...");
                parser = new Parser(new java.io.FileInputStream(args[0]));
            }
            catch(java.io.FileNotFoundException e) {
                System.out.println("Archive not found.");
                return;
            }
        }
        else{
            System.out.println("Out of Pattern!");
            return;
        }
        try{
            Program prog = parser.Program();

            DepthFirstVisitor table_visitor = new DepthFirstVisitor();
            prog.accept(table_visitor);

            TypeDepthFirstVisitor type_check = new TypeDepthFirstVisitor(table_visitor);
            prog.accept(type_check);
        }
        catch(Exception e){
            System.out.println("Unsuccessful Reading. Showing Error Message:");
            System.out.println(e.getMessage());
        }
    }
    private static void fullAnalysis(ArrayList<String> filenames) throws Exception {
        Parser parser = new Parser(new StringReader(""));
        for (String nome : filenames) {
            try {
                String file = readFile(nome);
                parser.ReInit(new StringReader(file));

                System.out.println("\nLENDO " + nome + "\n");

                List<Token> tokens = LexicalAnalyzer(parser, file);
                String resultadoAnaliseSintatica = SyntaxAnalyzer(parser, file);
                if (resultadoAnaliseSintatica.equals("")) {
                    System.out.println("\nSINTAXE OK\n");
                } else {
                    System.out.println("\nSINTAXE FALHA: " + resultadoAnaliseSintatica + "\n");
                }
                parser.ReInit(new StringReader(file));
            } catch (Exception e) {
                System.out.println("erro: " + e.getCause());
            }
        }
    }

    private static ArrayList<Token> LexicalAnalyzer(Parser parser, String input) throws TokenMgrError {
        parser.ReInit(new StringReader(input));
        ArrayList<Token> tokens = new ArrayList<Token>();

        // analise lexica
        try {
            while (true) {
                Token token = parser.getNextToken();
                if (token.kind == 0) {
                    break;
                }
                tokens.add(token);
                // exibir token atual
                System.out.println("Token atual: " + token.image);
            }
        } catch (TokenMgrError e) {
            // informações do token quando ocorrer um erro léxico
            System.out.println("Erro lexico: " + e.getMessage());
            System.out.println("Tokens correspondidos:");
            for (Token token : tokens) {
                System.out.println("Linha " + token.beginLine + ", Coluna " + token.beginColumn +
                        ": Imagem: \"" + token.image + "\", Kind: " + token.kind);
            }
        }

        return tokens;
    }

    private static String SyntaxAnalyzer(Parser parser, String input) {
        String res = "";
        try {
            parser.ReInit(new StringReader(input));
            parser.Program();
            return res;
        } catch (Throwable e) {
            return e.getMessage();
        }
    }

    private static String readFile(String filePath) throws Exception {
        File file = new File(filePath);
        BufferedReader reader = new BufferedReader(new FileReader(file));
        String line;
        StringBuilder stringBuilder = new StringBuilder();
        while ((line = reader.readLine()) != null) {
            stringBuilder.append(line);
            stringBuilder.append(System.lineSeparator());
        }
        reader.close();
        return stringBuilder.toString();
    }

// FEITO
  static final public Program Program() throws ParseException {
    MainClass mc;
    ClassDecl cd;
    ClassDeclList cl = new ClassDeclList();
    mc = MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      cd = ClassDeclaration();
                              cl.addElement(cd);
    }
    jj_consume_token(0);
     {if (true) return new Program(mc, cl);}
    throw new Error("Missing return statement in function");
  }

// FEITO
  static final public MainClass MainClass() throws ParseException {
    Identifier ci, ma;
    Statement s;
    jj_consume_token(CLASS);
    ci = ID();
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAR);
    jj_consume_token(STRING);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    ma = ID();
    jj_consume_token(RPAR);
    jj_consume_token(LBRACE);
    s = Statement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
     {if (true) return new MainClass(ci, ma, s);}
    throw new Error("Missing return statement in function");
  }

// FEITO
  static final public ClassDecl ClassDeclaration() throws ParseException {
    Identifier id1, id2 = null;
    VarDecl vd; VarDeclList vl = new VarDeclList();
    MethodDecl md; MethodDeclList ml = new MethodDeclList();
    jj_consume_token(CLASS);
    id1 = ID();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXTENDS:
      jj_consume_token(EXTENDS);
      id2 = ID();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case BOOLEAN:
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      vd = VarDeclaration();
                                vl.addElement(vd);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      md = MethodDeclaration();
                                                                                 ml.addElement(md);
    }
    jj_consume_token(RBRACE);
     {if (true) return (id2 == null) ? new ClassDeclSimple(id1, vl, ml) : new ClassDeclExtends(id1, id2, vl, ml);}
    throw new Error("Missing return statement in function");
  }

// FEITO
  static final public VarDecl VarDeclaration() throws ParseException {
    Type t; Identifier i;
    t = Type();
    i = ID();
    jj_consume_token(SCOLON);
     {if (true) return new VarDecl(t, i);}
    throw new Error("Missing return statement in function");
  }

// FEITO
  static final public MethodDecl MethodDeclaration() throws ParseException {
    Type t, taux; Identifier i, iaux; Exp e; MethodDecl md; VarDecl vd; Statement st;

    FormalList fl = new FormalList(); VarDeclList vl = new VarDeclList(); StatementList sl = new StatementList();
    jj_consume_token(PUBLIC);
    t = Type();
    i = ID();
    jj_consume_token(LPAR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOLEAN:
    case ID:
      taux = Type();
      iaux = ID();
                                    fl.addElement(new Formal(taux, iaux));
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        taux = Type();
        iaux = ID();
                                                                                                             fl.addElement(new Formal(taux, iaux));
      }
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(RPAR);
    jj_consume_token(LBRACE);
    label_5:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_5;
      }
      vd = VarDeclaration();
                                             vl.addElement(vd);
    }
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case ID:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_6;
      }
      st = Statement();
                           sl.addElement(st);
    }
    jj_consume_token(RETURN);
    e = Expression();
    jj_consume_token(SCOLON);
    jj_consume_token(RBRACE);
     {if (true) return new MethodDecl(t, i, fl, vl, sl, e);}
    throw new Error("Missing return statement in function");
  }

// FEITO, VER SE O ID FUNCIONA
  static final public Type Type() throws ParseException {
    Identifier id;
    if (jj_2_2(3)) {
      jj_consume_token(INT);
      jj_consume_token(LBRACKET);
      jj_consume_token(RBRACKET);
                   {if (true) return new IntArrayType();}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        jj_consume_token(INT);
             {if (true) return new IntegerType();}
        break;
      case BOOLEAN:
        jj_consume_token(BOOLEAN);
                 {if (true) return new BooleanType();}
        break;
      case ID:
        id = ID();
                 {if (true) return new IdentifierType(id.toString());}
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
   Statement s, s2;
   Exp e, e2; Identifier id;
   StatementList sl = new StatementList();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      jj_consume_token(LBRACE);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACE:
        case IF:
        case WHILE:
        case PRINT:
        case ID:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_7;
        }
        s = Statement();
                          sl.addElement(s);
      }
      jj_consume_token(RBRACE);
                                                     {if (true) return new Block(sl);}
      break;
    case IF:
      jj_consume_token(IF);
      jj_consume_token(LPAR);
      e = Expression();
      jj_consume_token(RPAR);
      s = Statement();
      jj_consume_token(ELSE);
      s2 = Statement();
                                                                              {if (true) return new If(e, s, s2);}
      break;
    case WHILE:
      jj_consume_token(WHILE);
      jj_consume_token(LPAR);
      e = Expression();
      jj_consume_token(RPAR);
      s = Statement();
                                                         {if (true) return new While(e, s);}
      break;
    case PRINT:
      jj_consume_token(PRINT);
      jj_consume_token(LPAR);
      e = Expression();
      jj_consume_token(RPAR);
      jj_consume_token(SCOLON);
                                                  {if (true) return new Print(e);}
      break;
    default:
      jj_la1[9] = jj_gen;
      if (jj_2_3(2)) {
        // coloquei de 6 para 2
              id = ID();
        jj_consume_token(EQUAL);
        e = Expression();
        jj_consume_token(SCOLON);
                                                {if (true) return new Assign(id, e);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          id = ID();
          jj_consume_token(LBRACKET);
          e = Expression();
          jj_consume_token(RBRACKET);
          jj_consume_token(EQUAL);
          e2 = Expression();
          jj_consume_token(SCOLON);
                                                                          {if (true) return new ArrayAssign(id, e, e2);}
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Expression() throws ParseException {
    Exp e1;
    e1 = Expr1();
    label_8:
    while (true) {
      if (jj_2_4(2)) {
        ;
      } else {
        break label_8;
      }
      e1 = Expr2(e1);
    }
      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp Expr1() throws ParseException {
    Exp e, e2;
    Token t;
    Identifier id;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case THIS:
      jj_consume_token(THIS);
             e = new This(); {if (true) return e;}
      break;
    case TRUE:
      jj_consume_token(TRUE);
               e = new True(); {if (true) return e;}
      break;
    case FALSE:
      jj_consume_token(FALSE);
                e = new False(); {if (true) return e;}
      break;
    case NUM:
      t = jj_consume_token(NUM);
                  e = new IntegerLiteral(Integer.parseInt(t.image)); {if (true) return e;}
      break;
    case ID:
      id = ID();
                  e = new IdentifierExp(id.toString()); {if (true) return e;}
      break;
    case LNOT:
      jj_consume_token(LNOT);
      e2 = Expression();
                              e = new Not(e2); {if (true) return e;}
      break;
    case LPAR:
      jj_consume_token(LPAR);
      e2 = Expression();
      jj_consume_token(RPAR);
                                  e = e2; {if (true) return e;}
      break;
    default:
      jj_la1[11] = jj_gen;
      if (jj_2_5(2)) {
        jj_consume_token(NEW);
        jj_consume_token(INT);
        jj_consume_token(LBRACKET);
        e2 = Expression();
        jj_consume_token(RBRACKET);
                                              e = new NewArray(e2); {if (true) return e;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NEW:
          jj_consume_token(NEW);
          id = ID();
          jj_consume_token(LPAR);
          jj_consume_token(RPAR);
                                e = new NewObject(id); {if (true) return e;}
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Expr2(Exp left_exp) throws ParseException {
    Exp right_exp; Exp final_exp;
    Identifier id;
    ExpList el = new ExpList();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LAND:
      jj_consume_token(LAND);
      right_exp = Expression();
                                    {if (true) return new And(left_exp, right_exp);}
      break;
    case SMALLER:
      jj_consume_token(SMALLER);
      right_exp = Expression();
                                     {if (true) return new LessThan(left_exp, right_exp);}
      break;
    case PLUS:
      jj_consume_token(PLUS);
      right_exp = Expression();
                                     {if (true) return new Plus(left_exp, right_exp);}
      break;
    case MINUS:
      jj_consume_token(MINUS);
      right_exp = Expression();
                                     {if (true) return new Minus(left_exp, right_exp);}
      break;
    case MULT:
      jj_consume_token(MULT);
      right_exp = Expression();
                                     {if (true) return new Times(left_exp, right_exp);}
      break;
    case LBRACKET:
      jj_consume_token(LBRACKET);
      right_exp = Expression();
      jj_consume_token(RBRACKET);
                                         {if (true) return new ArrayLookup(left_exp, right_exp);}
      break;
    default:
      jj_la1[15] = jj_gen;
      if (jj_2_6(2)) {
        jj_consume_token(DOT);
        jj_consume_token(LENGTH);
                     {if (true) return new ArrayLength(left_exp);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          jj_consume_token(DOT);
          id = ID();
          jj_consume_token(LPAR);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LPAR:
          case NEW:
          case THIS:
          case TRUE:
          case FALSE:
          case LNOT:
          case NUM:
          case ID:
            right_exp = Expression();
                                                     el.addElement(right_exp);
            label_9:
            while (true) {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case COMMA:
                ;
                break;
              default:
                jj_la1[13] = jj_gen;
                break label_9;
              }
              jj_consume_token(COMMA);
              right_exp = Expression();
                                         el.addElement(right_exp);
            }
            break;
          default:
            jj_la1[14] = jj_gen;
            ;
          }
          jj_consume_token(RPAR);
                                                                                {if (true) return new Call(left_exp, id, el);}
          break;
        default:
          jj_la1[16] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

// FEITO
  static final public Identifier ID() throws ParseException {
                   Token t;
    t = jj_consume_token(ID);
            {if (true) return new Identifier(t.image);}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_3R_26() {
    if (jj_scan_token(THIS)) return true;
    return false;
  }

  static private boolean jj_3R_25() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_26()) {
    jj_scanpos = xsp;
    if (jj_3R_27()) {
    jj_scanpos = xsp;
    if (jj_3R_28()) {
    jj_scanpos = xsp;
    if (jj_3R_29()) {
    jj_scanpos = xsp;
    if (jj_3R_30()) {
    jj_scanpos = xsp;
    if (jj_3R_31()) {
    jj_scanpos = xsp;
    if (jj_3R_32()) {
    jj_scanpos = xsp;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_3R_33()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3R_24() {
    if (jj_3R_25()) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3R_20() {
    if (jj_scan_token(DOT)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_3R_11()) return true;
    if (jj_scan_token(EQUAL)) return true;
    return false;
  }

  static private boolean jj_3_6() {
    if (jj_scan_token(DOT)) return true;
    if (jj_scan_token(LENGTH)) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    if (jj_3R_13()) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    if (jj_scan_token(LBRACKET)) return true;
    if (jj_3R_24()) return true;
    return false;
  }

  static private boolean jj_3R_18() {
    if (jj_scan_token(MULT)) return true;
    if (jj_3R_24()) return true;
    return false;
  }

  static private boolean jj_3R_17() {
    if (jj_scan_token(MINUS)) return true;
    if (jj_3R_24()) return true;
    return false;
  }

  static private boolean jj_3R_16() {
    if (jj_scan_token(PLUS)) return true;
    if (jj_3R_24()) return true;
    return false;
  }

  static private boolean jj_3R_15() {
    if (jj_scan_token(SMALLER)) return true;
    if (jj_3R_24()) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_14()) {
    jj_scanpos = xsp;
    if (jj_3R_15()) {
    jj_scanpos = xsp;
    if (jj_3R_16()) {
    jj_scanpos = xsp;
    if (jj_3R_17()) {
    jj_scanpos = xsp;
    if (jj_3R_18()) {
    jj_scanpos = xsp;
    if (jj_3R_19()) {
    jj_scanpos = xsp;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3R_20()) return true;
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_14() {
    if (jj_scan_token(LAND)) return true;
    if (jj_3R_24()) return true;
    return false;
  }

  static private boolean jj_3R_23() {
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3R_22() {
    if (jj_scan_token(BOOLEAN)) return true;
    return false;
  }

  static private boolean jj_3R_21() {
    if (jj_scan_token(INT)) return true;
    return false;
  }

  static private boolean jj_3R_33() {
    if (jj_scan_token(NEW)) return true;
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_scan_token(NEW)) return true;
    if (jj_scan_token(INT)) return true;
    return false;
  }

  static private boolean jj_3R_32() {
    if (jj_scan_token(LPAR)) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_scan_token(INT)) return true;
    if (jj_scan_token(LBRACKET)) return true;
    if (jj_scan_token(RBRACKET)) return true;
    return false;
  }

  static private boolean jj_3R_13() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3R_21()) {
    jj_scanpos = xsp;
    if (jj_3R_22()) {
    jj_scanpos = xsp;
    if (jj_3R_23()) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_31() {
    if (jj_scan_token(LNOT)) return true;
    return false;
  }

  static private boolean jj_3R_30() {
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3R_29() {
    if (jj_scan_token(NUM)) return true;
    return false;
  }

  static private boolean jj_3R_28() {
    if (jj_scan_token(FALSE)) return true;
    return false;
  }

  static private boolean jj_3R_27() {
    if (jj_scan_token(TRUE)) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_3R_12()) return true;
    return false;
  }
